[gd_scene load_steps=4 format=3 uid="uid://bauw3vtckwroo"]

[ext_resource type="Theme" uid="uid://c6q5tn6lrdfpy" path="res://assets/ui/theme.tres" id="1_vwgkh"]
[ext_resource type="Script" path="res://scenes/menus/level_select.gd" id="1_wpa6l"]

[sub_resource type="LabelSettings" id="LabelSettings_h52fr"]
font_size = 32

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -33.0
offset_top = -116.0
offset_right = 1247.0
offset_bottom = 604.0
theme = ExtResource("1_vwgkh")
script = ExtResource("1_wpa6l")

[node name="MenuButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -133.0
offset_right = 64.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="MenuButtons/VBoxContainer"]
layout_mode = 2
text = "Level Select"
label_settings = SubResource("LabelSettings_h52fr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Button" parent="MenuButtons/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Label" type="Label" parent="MenuButtons/VBoxContainer/Level1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -9.5
offset_bottom = 9.5
grow_horizontal = 0
grow_vertical = 2
text = "727"

[node name="SaveScore" type="Button" parent="MenuButtons/VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="MenuButtons/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MenuButtons/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MenuButtons/VBoxContainer/SaveScore" to="." method="_on_save_score_pressed"]
[connection signal="pressed" from="MenuButtons/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
